--- a/TemplateUI/css/main.css
+++ b/TemplateUI/css/main.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 /*Navbar*/
@@ -21,11 +22,14 @@ nav {
   border-radius: 25px;
   background-color: white;
   z-index: 3;
-  transition: .75s;
+  transition: 0.75s;
+  width: 125px;
+  justify-content: center;
 }
 
 #userinfo.clicked {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 15px 30px -6px inset, rgba(0, 0, 0, 0.3) 0px 11px 22px -11px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 15px 30px -6px inset,
+    rgba(0, 0, 0, 0.3) 0px 11px 22px -11px inset;
 }
 
 #userinfo > i {
@@ -43,30 +47,30 @@ nav {
   padding: 10px;
   border: 1.5px solid;
   border-radius: 30px;
-  transition: .75s;
+  transition: 0.75s;
   max-height: 0px;
   overflow: hidden;
   background-color: white;
   z-index: 2;
+  width: 125px;
 }
 
 #usermenu > .blank {
-    height: 30px;
+  height: 30px;
 }
 
 #usermenu a {
-    display: block;
-    margin: 10px;
-    text-decoration: none;
-    color: black;
+  display: block;
+  margin: 10px;
+  text-decoration: none;
+  color: black;
 }
 
 #usermenu i {
-    width: 20px;
-    margin-right: 5px;
-    text-align: center;
+  width: 20px;
+  margin-right: 5px;
+  text-align: center;
 }
-
 
 /*Sidenav*/
 #sidenav {
@@ -108,7 +112,7 @@ nav {
   margin-right: 20px;
   font-size: medium;
   text-align: center;
-  background-color: #1D2153;
+  background-color: #1d2153;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
@@ -120,8 +124,13 @@ main {
   position: absolute;
   height: calc(100vh - 120px);
   width: calc(100vw - 100px);
+  max-height: calc(100vh - 120px);
+  max-width: calc(100vw - 100px);
   border-radius: 20px;
   top: 100px;
   left: 85px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
