--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/home/home.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<app-header></app-header>
+<app-sidenav></app-sidenav>
+<main>
+  <!-- Your main content goes here -->
+</main>
+<footer>
+  <!-- Your footer content goes here -->
+</footer>
