--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <aside id="sidenav">
-    <a routerLink="/home">
+    <a routerLink="/home" routerLinkActive="active">
       <i class="fa-solid fa-house"></i><b>Financial<br />Planning</b>
     </a>
     <a routerLink="/terms">
