--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -1,5 +1,5 @@
 <main>
-  <!-- Your main content goes here -->
+  <a routerLink="/create-term">Create Term</a>
 </main>
 <footer>
   <!-- Your footer content goes here -->
