--- a/TemplateUI/css/preview.css
+++ b/TemplateUI/css/preview.css
@@ -2,16 +2,17 @@ form > div {
     white-space: nowrap;
 }
 
-form input {
+form input, form select{
     display: inline !important;
     border: 0 !important;
     background-color: #ffffff00 !important;
-    width: 80% !important;
+    width: 65% !important;
 }
 
 form label {
-    width: 120px;
+    width: 30% !important;
     font-weight: bold;
+    display: inline-block;
 }
 
 table {
