--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -1,5 +1,8 @@
 <main>
   <a routerLink="/create-term">Create Term</a>
+  <!-- <a routerLink="/edit-term">Edit Term</a> -->
+  <a [routerLink]="['/term-details', termId]">Term Details</a>
+
 </main>
 <footer>
   <!-- Your footer content goes here -->
