--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
@@ -10,19 +10,46 @@ form .col-6 {
 
 form input,
 form select {
-    width: 90%;
-    /* Increase input/select width */
-    margin-bottom: 10px;
-    /* Add some bottom margin */
+    border: 2px solid #575757   ;
+    border-radius: 4px;
+    /* width: 60%; */
+    height: 50px;
+    padding: 0 15px;
+    transition: .25s ease;
 }
 
-form label {
-    width: 100%;
-    /* Set label width to 100% */
+form input:focus, form select:focus {
+    border-color: rgb(133, 68, 165);
+}
+
+.form-field{
+    position: relative;
+}
+
+/* form label {
+    position: absolute;
+    top: 25px;
+    transform: translateY(-50%);
+    left: 30px;
+    color: #575757;
+    user-select: none;
+    pointer-events: none;
+    transition: .25s ease;
+    font: 400 16px/1.5 'Roboto', sans-serif;
+} */
+
+.form-control:focus + label {
+    top: 0px;
+    padding: 10px;
     display: inline-block;
-    /* Keep labels inline */
-    margin-bottom: 5px;
-    /* Add some bottom margin */
+    background-color: white;
+    color: rgb(133, 68, 165);
+}
+
+form div.error-message {
+    color: red;
+    font-size: 14px;
+    padding-left: 10px;
 }
 
 
@@ -38,7 +65,7 @@ main {
 
 main>div {
     border-radius: 24px;
-    /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 20px;
 }
 
@@ -51,8 +78,8 @@ main {
     border-radius: 20px;
     top: 100px;
     left: 80px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    -moz-box-sizing: border-box;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+    /* -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    box-sizing: border-box; */
 }
