--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.html
@@ -1,68 +1,141 @@
 <main>
-    <!-- Document info -->
-    <h1>
-        Create Term
-    </h1>
-    <div class="doc-info mb-5">
-        <form class="row">
-            <div class="col-6">
-                <h4>
-                    <label for="term-name" class="form-label">Term name</label>
-                </h4>
-                <input class="form-control" type="text" id="plan-name" value="Term name" />
-            </div>
-            <div class="col-6">
-                <h4>
-                    <label for="start-date" class="form-label">Start date</label>
-                </h4>
-                <input class="form-control" type="date" id="start-date" value="02/10/2022" />
-            </div>
-            <div class="col-6">
-                <h4>
-                    <label for="duration" class="form-label">Duration</label>
-                </h4>
-                <select class="form-control" id="duration" name="selectedDuration">
-                    <option value="1_month">1 Month</option>
-                    <option value="quarter">Quarter</option>
-                    <option value="half_year">Half Year</option>
-                </select>
-            </div>
-            <div class="col-6">
-                <h4>
-                    <label for="end-date" class="form-label">End date</label>
-                </h4>
-                <input class="form-control" type="date" id="end-date" value="02/10/2022" disabled />
-            </div>
-            <div class="col-6">
-                <h4>
-                    <label for="plan-due-date" class="form-label">Plan due date</label>
-                </h4>
-                <input class="form-control" type="date" id="plan-due-date" value="02/10/2022" />
-            </div>
-            <div class="col-6">
-                <h4>
-                    <label for="report-due-date" class="form-label">Report due date</label>
-                </h4>
-                <input class="form-control" type="date" id="report-due-date" value="02/10/2022" />
-            </div>
-        </form>
-    </div>
-
-    <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6">
+    <h1 class="mb-4">Create Term</h1>
+    <!-- <div class="container h-100"> -->
+    <div class="row d-flex justify-content-center align-items-center ">
+        <!-- <div class="col-xl-9"> -->
+        <!-- <div class="card" style="border-radius: 15px;"> -->
+        <!-- <div class="card-body"> -->
+        <form [formGroup]="termForm" (ngSubmit)="onSubmit()">
             <div class="row">
-                <div class="col-6">
-                    <button class="btn btn-primary btn-block" type="submit">Create</button>
+
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">Term name</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <input class="form-control form-control-lg" type="text" id="term-name"
+                                formControlName="termName" />
+                        </div>
+                        <div class="error-message col-md-3"
+                            *ngIf="termForm.get('termName')?.errors?.['required'] && termForm.get('termName')?.touched">
+                            Term Name is required
+                        </div>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <button class="btn btn-secondary btn-block" type="button">Cancel</button>
+                
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">Start date</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <input class="form-control form-control-lg" type="date" id="start-date"
+                                formControlName="startDate" />
+                        </div>
+                        <div class="error-message col-md-3"
+                            *ngIf="termForm.get('startDate')?.errors?.['required'] && termForm.get('startDate')?.touched">
+                            <span class="text-danger">Start Date is required</span>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <hr class="mx-n3">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">Duration</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <select class="form-control form-control-lg" id="duration" formControlName="duration">
+                                <option value="1_month">1 Month</option>
+                                <option value="quarter">Quarter</option>
+                                <option value="half_year">Half Year</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <!-- End date -->
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">End date</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <input class="form-control form-control-lg" type="date" id="end-date"
+                                formControlName="endDate" />
+                            <div class="error-message"
+                                *ngIf="termForm.get('endDate')?.errors?.['required'] && termForm.get('endDate')?.touched">
+                                <span class="text-danger">End Date is required</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr class="mx-n3">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">Plan due date</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <input class="form-control form-control-lg" type="date" id="plan-due-date"
+                                formControlName="planDueDate" />
+                        </div>
+                        <!-- <div class="col-md-3 pe-5"> -->
+                        <div class="col-md-3">
+                            <div class="error-message" *ngIf="termForm.get('planDueDate')?.touched">
+                                <span class="text-danger">{{ getPlanDueDateErrorMessage() }}</span>
+                            </div>
+                        </div>
+                        <!-- Add more error messages as needed -->
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row align-items-center pt-4 pb-3">
+                        <div class="col-md-3 ps-5">
+                            <h6 class="mb-0">Report due date</h6>
+                        </div>
+                        <div class="col-md-5 pe-3">
+                            <input class="form-control form-control-lg" type="date" id="report-due-date"
+                                formControlName="reportDueDate" />
+                        </div>
+                        <div class="col-md-3">
+                            <div class="error-message" *ngIf="termForm.get('reportDueDate')?.touched">
+                                <span class="text-danger">{{ getReportDueDateErrorMessage() }}</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- </div> -->
+                    <!-- Report Due Date -->
+                </div>
+
+            </div>
+
+            <div class="row align-items-center justify-content-center py-3">
+                <div class="col-md-6 text-center">
+                    <button type="submit" class="btn btn-primary btn-lg me-3">Create</button>
+                    <button type="button" class="btn btn-secondary btn-lg" (click)="onCancel()">Cancel</button>
+                </div>
+            </div>
+
+
+        </form>
+        <!-- </div> -->
+        <!-- </div> -->
+
+        <!-- </div> -->
     </div>
+    <!-- </div> -->
 
 </main>
+
 <footer>
     <!-- Your footer content goes here -->
 </footer>
