--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+.backgroundLogin {
+    background-image: URL('../src/assets/img/curved-images/sunset-8485916_1280.jpg'); 
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000; /* Thay đổi màu nền theo ý muốn */
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+  
