--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
@@ -11,5 +11,6 @@
     <a routerLink="/reports">
       <i class="fa-solid fa-file"></i><b>Report List</b>
     </a>
+    <app-logout></app-logout>
   </aside>
   
