--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
@@ -4,12 +4,12 @@
     <section>
       <div class="page-header min-vh-75">
         <div class="container">
-          <div class="row">
+          <div class="row"> 
             <!-- <div class="col-md-6"></div> -->
             <div class="col-md-6">
               <div class="card card-plain mt-4">
                 <div class="card-header pb-0 text-left bg-transparent">
-                  <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
+                  <h3 class="font-weight-bolder text-info text-gradient">Weath come </h3>
                   <p class="mb-0">Enter your email and password to sign in</p>
                 </div>
                 <div class="card-body">
@@ -42,8 +42,8 @@
                     <!-- Error pass -->
                     <p class="text-danger">{{ errorMessage }}</p>
                     <div class="text-center">
-                      <button type="button" (click)="login()" class="btn bg-gradient-info w-100 mt-4 mb-0">login
-                        in</button>
+                      
+                      <button type="button" (click)="login()" class="btn bg-gradient-info w-100 mt-4 mb-0">login</button>
                     </div>
                   </form>
                 </div>
@@ -62,5 +62,7 @@
         </div>
       </div>
     </section>
+      
+  
   </main>
 </div>
