--- a/FinancialPlaningUI/FinancialPlaning/src/app/app.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-header *ngIf="logged"></app-header>
-<app-sidenav *ngIf="logged"></app-sidenav>
-<!-- Navigate to <a routerLink="/@Angular">Bruh</a> -->
-
+<app-sidenav></app-sidenav>
 <router-outlet/>
