--- a/FinancialPlaningUI/FinancialPlaning/src/styles.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/styles.css
@@ -1,6 +1,12 @@
+body {
+  font-family: 'Lato', Candara, Calibri, Segoe, Segoe UI, Optima, Arial, sans-serif;
+  background-color: #070F2B;
+  color: white;
+}
+
 .backgroundLogin {
-    background-image: URL('../src/assets/img/curved-images/sunset-8485916_1280.jpg'); 
-    position: fixed;
+  background-image: URL("../src/assets/img/curved-images/sunset-8485916_1280.jpg");
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -9,4 +15,3 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-  
