--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
@@ -6,27 +6,12 @@
   <a routerLink="/plans"> <i class="fa-solid fa-list-check"></i>Plan List</a>
   <a routerLink="/reports"> <i class="fa-regular fa-file"></i>Report List</a>
   <div id="account">
-    <a>
-      <i class="fa-regular fa-user"></i>
-      <div>Abc Xyz<br /><span id="role">Admin</span></div>
-      <a id="logout">
-        <i class="fa-solid fa-arrow-right-from-bracket"></i>Log out
-      </a>
+  
+    <i class="fa-regular fa-user"></i>
+    <div>Abc Xyz<br /><span id="role">Admin</span></div>
+    <a id="logout" (click)="logout()">
+      <i class="fa-solid fa-arrow-right-from-bracket"></i>
     </a>
-<<<<<<< HEAD
+  
   </div>
 </aside>
-=======
-    <a routerLink="/terms">
-      <i class="fa-solid fa-timeline"></i><b>Term List</b>
-    </a>
-    <a routerLink="/plans">
-      <i class="fa-solid fa-list-check"></i><b>Plan List</b>
-    </a>
-    <a routerLink="/reports">
-      <i class="fa-solid fa-file"></i><b>Report List</b>
-    </a>
-    <app-logout></app-logout>
-  </aside>
-  
->>>>>>> origin/feat/logout
