update term view

--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
@@ -9,9 +9,9 @@
     <a>
       <i class="fa-regular fa-user"></i>
       <div>Abc Xyz<br /><span id="role">Admin</span></div>
-      <a id="logout">
+      <!-- <a id="logout">
         <i class="fa-solid fa-arrow-right-from-bracket"></i>Log out
-      </a>
+      </a> -->
     </a>
   </div>
 </aside>
