--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/create-term/create-term.component.css
@@ -65,7 +65,8 @@ main {
 
 main>div {
     border-radius: 24px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    /* box-shadow: white 0px 8px 24px; */
+    box-shadow:  white 0px -12px 30px, white 0px 4px 6px, white 0px 12px 13px, white 0px -3px 5px;
     padding: 20px;
 }
 
