--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.css
@@ -6,7 +6,7 @@ main {
   max-width: calc(100vw - 100px);
   left: 80px;
   padding: 30px;
-  background-color: #070F2B;
+  background-color: #070f2b;
 }
 
 .container {
@@ -22,7 +22,7 @@ div:has(#page-title) {
 }
 
 button {
-  background: #535C91;
+  background: #535c91;
   border: none;
 }
 
@@ -44,12 +44,73 @@ button {
 }
 
 #status-filter {
-    border-bottom: 1px solid #9290C3;
+  border-bottom: 1px solid #1b1a55;
 }
 
 #status-filter > button {
-    padding: 10px;
-    background-color: #070F2B;
-    color: #9290C3;
-    width: 125px;
+  padding: 10px;
+  background-color: #070f2b;
+  color: #9290c3;
+  width: 125px;
+}
+
+#status-filter > .chosen {
+  border-bottom: 4px solid #9290c3;
+  color: white;
+}
+
+.searchBar {
+  position: relative;
+}
+
+.searchBar input[type="text"] {
+  width: 50%;
+  line-height: 2.5;
+  padding: 0px 35px;
+  border: 1px solid #9290c3;
+  border-radius: 10px;
+  background-color: #070f2b;
+  color: white;
+}
+
+.searchBar .fa-search {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #9290c3;
+}
+
+table {
+  width: 100%;
+  min-height: auto;
+  background-color: #070f2b;
+  border: 1px solid #9290c3;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: hidden !important;
+  box-shadow: 0px -5px 2px -4px #9290c3;
+  flex-shrink: 0;
+}
+
+th {
+  border-bottom: 1px solid #1b1a55;
+  color: white;
+}
+
+td {
+  border-top: 1px solid #535c91;
+  color: #9290c3;
+}
+
+::ng-deep .mat-mdc-paginator {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
+}
+
+::ng-deep .mat-mdc-paginator-outer-container {
+  background-color: #535c91;
+  color: white;
 }
