--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
   <div id="account">
    
     <i class="fa-regular fa-user"></i>
-    <div>{{ username }}<br /><span id="role">Admin</span></div>
+    <div>{{ username }}<br /><span id="role">{{role}}</span></div>
     <a id="logout" (click)="logout()">
       <i class="fa-solid fa-arrow-right-from-bracket"></i>
     </a>
