--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -7,18 +7,18 @@
     <a routerLink="/create-term" id="create-button"><button><i class="fa-solid fa-plus"></i> Create</button></a>
   </div>
   <div id="status-filter" class="mb-4">
-    <button class="chosen">All Statuses</button>
-    <button>New</button>
-    <button>In-Progress</button>
-    <button>Closed</button>
+    <button class="chosen" (click)="changeStatusFilter($event)">All</button>
+    <button (click)="changeStatusFilter($event)">New</button>
+    <button (click)="changeStatusFilter($event)">In Progress</button>
+    <button (click)="changeStatusFilter($event)">Closed</button>
   </div>
   <div class="mb-4">
-    <form [formGroup]="searchForm" class="searchBar" (ngSubmit)="onSearchSubmit()">
-      <input type="text" placeholder="Search for Terms" formControlName="searchValue" />
-      <i class="fa-solid fa-search" (click)="onSearchSubmit()"></i>
+    <form class="searchBar">
+      <input type="text" placeholder="Search for Terms" formControlName="searchValue" (input)="changeSearchText($event)"/>
+      <i class="fa-solid fa-search"></i>
     </form>
   </div>
-  <table mat-table [dataSource]="termList" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="term">
       <th mat-header-cell *matHeaderCellDef>Term</th>
       <td mat-cell *matCellDef="let term">{{term.termName}}</td>
@@ -44,7 +44,7 @@
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
     <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
   </table>
-  <mat-paginator [length]="termList.length" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)">
+  <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)">
   </mat-paginator>
 </main>
 <footer>
