--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -4,7 +4,9 @@
       <h3><b>Terms</b></h3>
       <h6>View all terms</h6>
     </div>
-    <a routerLink="/create-term" id="create-button"><button><i class="fa-solid fa-plus"></i> Create</button></a>
+    <a *ngIf="role == 'Accountant'" routerLink="/create-term" id="create-button">
+      <button><i class="fa-solid fa-plus"></i> Create</button>
+    </a>
   </div>
   <div id="status-filter" class="mb-4">
     <button class="chosen" (click)="changeStatusFilter($event)">All</button>
@@ -14,7 +16,8 @@
   </div>
   <div class="mb-4">
     <form class="searchBar">
-      <input type="text" placeholder="Search for Terms" formControlName="searchValue" (input)="changeSearchText($event)"/>
+      <input type="text" placeholder="Search for Terms" formControlName="searchValue"
+        (input)="changeSearchText($event)" />
       <i class="fa-solid fa-search"></i>
     </form>
   </div>
@@ -38,7 +41,9 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let term">
-        <a [routerLink]="[ '/term-details/', term.id ]"><mat-icon>visibility</mat-icon></a><a><mat-icon>edit</mat-icon></a><a><mat-icon>delete</mat-icon></a>
+        <a [routerLink]="[ '/term-details/', term.id ]"><mat-icon>visibility</mat-icon></a>
+        <a *ngIf="role === 'Accountant'" [routerLink]="[ 'edit-term/', term.id ]"><mat-icon>edit</mat-icon></a>
+        <a *ngIf="role === 'Accountant'" [routerLink]="[ 'term/delete/', term.id ]"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
