--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -4,7 +4,7 @@
       <h3><b>Terms</b></h3>
       <h6>View all terms</h6>
     </div>
-    <a *ngIf="role == 'Accountant'" routerLink="/create-term" id="create-button">
+    <a routerLink="/create-term" id="create-button" [hidden]="role !== 'Accountant'">
       <button><i class="fa-solid fa-plus"></i> Create</button>
     </a>
   </div>
@@ -16,8 +16,7 @@
   </div>
   <div class="mb-4">
     <form class="searchBar">
-      <input type="text" placeholder="Search for Terms" formControlName="searchValue"
-        (input)="changeSearchText($event)" />
+      <input type="text" placeholder="Search for Terms" (input)="changeSearchText($event)" />
       <i class="fa-solid fa-search"></i>
     </form>
   </div>
@@ -42,8 +41,8 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let term">
         <a [routerLink]="[ '/term-details/', term.id ]"><mat-icon>visibility</mat-icon></a>
-        <a *ngIf="role === 'Accountant'" [routerLink]="[ 'edit-term/', term.id ]"><mat-icon>edit</mat-icon></a>
-        <a *ngIf="role === 'Accountant'" [routerLink]="[ 'term/delete/', term.id ]"><mat-icon>delete</mat-icon></a>
+        <a [routerLink]="[ 'edit-term/', term.id ]" [hidden]="role !== 'Accountant'"><mat-icon>edit</mat-icon></a>
+        <a [hidden]="role !== 'Accountant' || term.status !== 'New'" (click)="openDeleteDialog(term.id)"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
