--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
@@ -43,7 +43,7 @@
                     <p class="text-danger">{{ errorMessage }}</p>
                     <div class="text-center">
                       
-                      <button type="button" (click)="login()" class="btn bg-gradient-info w-100 mt-4 mb-0">login</button>
+                      <button type="submit" (keyup.enter)="login()" (click)="login()" class="btn bg-gradient-info w-100 mt-4 mb-0">login</button>
                     </div>
                   </form>
                 </div>
