--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -1,56 +1,63 @@
 <main>
-    <div class="container mb-4">
-      <div id="page-title">
-        <h3><b>Terms</b></h3>
-        <h6>View all terms</h6>
-      </div>
-      <a routerLink="/create-term" id="create-button" >
-        <button><i class="fa-solid fa-plus"></i> Create</button>
-      </a>
+  <div class="container mb-4">
+    <div id="page-title">
+      <h3><b> Monthly Reports</b></h3>
+      <h6>View all Monthly Reports</h6>
     </div>
-    <div id="status-filter" class="mb-4">
-      <!-- <button class="chosen" (click)="changeStatusFilter($event)">All</button>
-      <button (click)="changeStatusFilter($event)">New</button>
-      <button (click)="changeStatusFilter($event)">In Progress</button>
-      <button (click)="changeStatusFilter($event)">Closed</button> -->
-    </div>
-    <div class="mb-4">
-      <form class="searchBar">
-        <!-- <input type="text" placeholder="Search for Terms" (input)="changeSearchText($event)" /> -->
-        <i class="fa-solid fa-search"></i>
-      </form>
-    </div>
-    <table mat-table class="mat-elevation-z8">
-      <ng-container matColumnDef="term">
-        <th mat-header-cell *matHeaderCellDef>Term</th>
-        <td mat-cell *matCellDef="let term">{{term.termName}}</td>
-      </ng-container>
-      <ng-container matColumnDef="startDate">
-        <th mat-header-cell *matHeaderCellDef>Start Date</th>
-        <td mat-cell *matCellDef="let term">{{term.startDate}}</td>
-      </ng-container>
-      <ng-container matColumnDef="endDate">
-        <th mat-header-cell *matHeaderCellDef>End Date</th>
-        <td mat-cell *matCellDef="let term">{{term.endDate}}</td>
-      </ng-container>
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let term">{{term.status}}</td>
-      </ng-container>
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let term">
-          <!-- <a [routerLink]="[ '/term-details/', term.id ]"><mat-icon>visibility</mat-icon></a>
-          <a [routerLink]="[ 'edit-term/', term.id ]" [hidden]="role !== 'Accountant'"><mat-icon>edit</mat-icon></a>
-          <a [hidden]="role !== 'Accountant' || term.status !== 'New'" (click)="openDeleteDialog(term.id)"><mat-icon>delete</mat-icon></a> -->
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
-    </table>
-    <!-- <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)">
-    </mat-paginator> -->
-  </main>
-  <footer>
-    <!-- Your footer content goes here -->
-  </footer>
+  </div>
+  <div class="mb-4">
+    <form class="searchBar">
+      <input type="text" placeholder="Search "  />
+      <i class="fa-solid fa-search"></i>
+    </form>
+  </div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="reportName">
+      <th mat-header-cell *matHeaderCellDef>Report </th>
+      <td mat-cell *matCellDef="let element"> {{element.reportName}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="month">
+      <th mat-header-cell *matHeaderCellDef> Month </th>
+      <td mat-cell *matCellDef="let element"> {{element.month}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="termName">
+      <th mat-header-cell *matHeaderCellDef> Term </th>
+      <td mat-cell *matCellDef="let element"> {{element.termName}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="departmentName">
+      <th mat-header-cell *matHeaderCellDef> Department </th>
+      <td mat-cell *matCellDef="let element"> {{element.departmentName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.status === 1 ? 'New' : element.status === 2 ? 'Closed' : '' }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="version">
+      <th mat-header-cell *matHeaderCellDef> Version </th>
+      <td mat-cell *matCellDef="let element"> v{{element.version}} </td>
+    </ng-container>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="[ '/term-details/', element.id ]"><mat-icon>visibility</mat-icon></a>
+
+        <a [hidden]="(role == 'Accountant' && element.departmentName!= departmentName) || element.status == '2'" ><mat-icon>delete</mat-icon></a>
+      </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</main>
