Add forgot-password UI

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
             <div class="col-md-6">
               <div class="card card-plain mt-4">
                 <div class="card-header pb-0 text-left bg-transparent">
-                  <h3 class="font-weight-bolder text-info text-gradient">Weath come </h3>
+                  <h3 class="font-weight-bolder text-info text-gradient">Wealth come </h3>
                   <p class="mb-0">Enter your email and password to sign in</p>
                 </div>
                 <div class="card-body">
@@ -50,7 +50,7 @@
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
                    
-                    <a href="javascript:;" class="text-info text-gradient font-weight-bold">Forgot password</a>
+                    <a routerLink="/forgot-password" class="text-info text-gradient font-weight-bold">Forgot password</a>
                   </p>
                 </div>
               </div>
