--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -103,10 +103,10 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
-        <a [routerLink]="[ '/term-details/', element.id ]"><mat-icon>visibility</mat-icon></a>
+        <a [routerLink]="[ '/report-details/', element.id ]"><mat-icon>visibility</mat-icon></a>
 
         <a
-          [hidden]="(role == 'Accountant' && element.departmentName!= departmentName) || element.status == '2'"><mat-icon>delete</mat-icon></a>
+          [hidden]="(role == 'Accountant' && element.departmentName!= departmentName) || element.status == '2'"  (click)="openDeleteDialog(element.id)"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
 
